hphp/test/quick/call12.php.expectf

Fatal error: Call to undefined method A::foo() in %s on line 10
